--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
         </div>
         </div>
       </div>
+      
       <div class="col-sm-3">
       <div class="footer-widget">
         <h3>Horario De Soporte</h3>
@@ -226,7 +227,7 @@
             <li><span><i class="fa fa-check"></i></span><p><strong>martes :</strong> 8am - 6pm</p></li>
             <li><span><i class="fa fa-check"></i></span><p><strong>miercoles :</strong> 8am - 6pm</p></li>
             <li><span><i class="fa fa-check"></i></span><p><strong>jueves :</strong> 8am - 6pm</p></li>
-            <li><span><i class="fa fa-times"></i></span><p class="clock-time"><strong>vi-sa-do</strong></p>
+            <li><span><i class="fa fa-times"></i></span><p><strong>vi-sa-do:</strong> non</p>
           </ul>
            </div>
         </div>
