--- a/pages/colecciones.html
+++ b/pages/colecciones.html
@@ -85,48 +85,204 @@
 <!--/nav-->
 
 <!--INICIO CONTENIDO-->
-<!--CONTENIDO TEMPORAL-->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 cl-xs-12">
-                <h1 class="tituloqs">Colecciones</h1>
-            </div>
-    </section>
+<!--CONTENIDO TITULO-->
+<section class="container-fluid">
+  <div class="row">
+      <div class="col-lg-12 cl-xs-12">
+          <h1 class="tituloqs">Tu Coleccion</h1>
+      </div>
+</section>
+<!--contenido-->
+<!--cuadros de items-->
+<section class="container-fluid">
+  <div class="row">
 
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 cl-xs-12">
-                <h1>Aquí los usuarios podrán subir fotos de sus colecciones solo por placer de mostrarlas.</h1>
-            </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/e0b24ec8d34956f353392176f08d8fdd8837e5f3555cdfabf5be6c41fc90986613243.jpeg" style="width: 100%;" alt="Producto - Aang Spirit Avatar Special Edition">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/5e00c37fb74b4d26bb061d0d9ff78bb9995fd7af735e8f2096cf20dd528140ca13243.jpeg" style="width: 100%;" alt="Producto - Rey Two Lightsabers Star Wars">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/c1094647cd9b801bb66368a64a965aa1c0a7b6c9bda0f6abdfa4694a610a955013243.jpeg" style="width: 100%;" alt="Producto - Scooby Doo Art Series Boxlunch Exclusive">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
 
-            <div class="col-lg-12 col-xs-12">
-                <h2>Titulo secundario del contenido</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi, magni iure beatae molestias officia a soluta quos eum deleniti 
-                    quia consectetur, laudantium similique odit, maiores placeat accusantium nihil dolores!</p>
-            </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/e0b24ec8d34956f353392176f08d8fdd8837e5f3555cdfabf5be6c41fc90986613243.jpeg" style="width: 100%;" alt="Producto - Aang Spirit Avatar Special Edition">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/5e00c37fb74b4d26bb061d0d9ff78bb9995fd7af735e8f2096cf20dd528140ca13243.jpeg" style="width: 100%;" alt="Producto - Rey Two Lightsabers Star Wars">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/c1094647cd9b801bb66368a64a965aa1c0a7b6c9bda0f6abdfa4694a610a955013243.jpeg" style="width: 100%;" alt="Producto - Scooby Doo Art Series Boxlunch Exclusive">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
 
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/e0b24ec8d34956f353392176f08d8fdd8837e5f3555cdfabf5be6c41fc90986613243.jpeg" style="width: 100%;" alt="Producto - Aang Spirit Avatar Special Edition">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/5e00c37fb74b4d26bb061d0d9ff78bb9995fd7af735e8f2096cf20dd528140ca13243.jpeg" style="width: 100%;" alt="Producto - Rey Two Lightsabers Star Wars">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/c1094647cd9b801bb66368a64a965aa1c0a7b6c9bda0f6abdfa4694a610a955013243.jpeg" style="width: 100%;" alt="Producto - Scooby Doo Art Series Boxlunch Exclusive">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/e0b24ec8d34956f353392176f08d8fdd8837e5f3555cdfabf5be6c41fc90986613243.jpeg" style="width: 100%;" alt="Producto - Aang Spirit Avatar Special Edition">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/5e00c37fb74b4d26bb061d0d9ff78bb9995fd7af735e8f2096cf20dd528140ca13243.jpeg" style="width: 100%;" alt="Producto - Rey Two Lightsabers Star Wars">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-4 cl-xs-6">
+          <div class="block-products-set__product uk-width-1-4@m  uk-width-1-2">
+              <div class="block-products-set__product-wrapper">
+              <div class="block-products-set__product-media">
+                  <a href="" class="block-products-set__product-link">
+                  <img class="small block-products-set__product-image" src="https://d22fxaf9t8d39k.cloudfront.net/c1094647cd9b801bb66368a64a965aa1c0a7b6c9bda0f6abdfa4694a610a955013243.jpeg" style="width: 100%;" alt="Producto - Scooby Doo Art Series Boxlunch Exclusive">
+              </a>
+              </div>
+              <h3 class="block-products-set__product-name text--primary">
+                  <a href="">Usuario</a>
+              </h3>
+                  <p class="block-products-set__product-price text--primary">Aqui cada usuario podra mostrar su coleccion</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<!--botones para pasar pagina-->
             <div class="col-lg-12 col-xs-12">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
