--- a/pages/unirte.html
+++ b/pages/unirte.html
@@ -84,14 +84,14 @@
 <!--/nav-->
 
 <!--INICIO CONTENIDO-->
-<!--CONTENIDO TEMPORAL-->
+<!--CONTENIDO TITULO-->
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 cl-xs-12">
                 <h1 class="tituloqs">Unirte</h1>
             </div>
     </section>
-
+<!--contenido-->
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-xs-12">
