--- a/pages/tradeos.html
+++ b/pages/tradeos.html
@@ -83,8 +83,8 @@
     </header>
 <!--/nav-->
 
-<!--INICIO CONTENIDO-->
-<!--CONTENIDO TEMPORAL-->
+<!--INICIO TITULO-->
+<!--CONTENIDO TITULO-->
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 cl-xs-12">
