--- a/pages/vendedoresdeconfianza.html
+++ b/pages/vendedoresdeconfianza.html
@@ -84,22 +84,15 @@
 <!--/nav-->
 
 <!--INICIO CONTENIDO-->
-<!--CONTENIDO TEMPORAL-->
+<!--CONTENIDO TITULO-->
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 cl-xs-12">
                 <h1 class="tituloqs">Vendedores De Confianza</h1>
             </div>
     </section>
-
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 cl-xs-12">
-                <h1>Aqui Los Vendedores Con Reputacion Pueden Mostrar Su Stock</h1>
-            </div>  
-        </div>
-    </section>
-
+<!--/CONTENIDO TITULO-->
+<!--CONTENIDO-->
     <section class="container-fluid">
       <div class="row">
 
